<resources>
    <string name="app_name">Reflections of Faith</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_chats">Chats</string>
    <string name="bottom_menu_sell">Sell</string>
    <string name="bottom_menu_myAds">My Ads</string>
    <string name="bottom_menu_account">Account</string>
    <string name="sell_Fab_description">Sell btn</string>
    <string name="Scroll_view_LogIn">LogIN Scroll</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_guest">Continue with Guest</string>
    <string name="not_have_account">Not have Account? <b>Register</b></string>
    <string name="already_have_account">Already have Account <b>LogIn</b></string>
    <string name="register_btn">Register</string>
    <string name="default_web_client_id">815260149117-u55fqt3v3o4llrua74jjf0vqd3sa6e11.apps.googleusercontent.com</string>
    <string name="did_t_receive_otp_resend">Did\'t Receive OTP? <b>Resend</b></string>
    <string name="back_btn">back_Btn</string>
    <string name="forget_password">Forgot Password?<b>Recover</b></string>
    <string name="submit_btn">Forgot submit btn</string>
    <string name="image_btn">Image button</string>
    <string name="price_symbol">Rs</string>
    <string name="ad_favourite_btn">Ad favourite Button</string>
    <string name="myName">ScriptSquad<b>(Reflections of Faith)</b></string>
    <string name="mission_thisApp_text">The Jesus Alive Ministries Church App is a mobile application designed to enhance the spiritual and community experience of churchgoers. This app provides a user-friendly platform for church members to stay connected with Jesus Alive Ministries, access devotional materials, Bibles and sermons, view notices and events, donate to various causes, and engage with the church community. The app upholds religious sensitivities and ensures privacy and security in compliance with POPIA regulations.</string>
    <string name="about_thisApp_text">This App is developed by <b>Script Squad</b>.As final Year Project for our OPSC7312 module</string>
    <string name="linkedin">Links</string>
    <string name="resume">OPSC</string>
    <string name="git_hub">Git Hub</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="update_ad">Update Ad</string>
    <string name="create_ad">Create Ad</string>
    <string name="post_ad">Post Ad</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to %1$s</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="my_ads">My Ads</string>
    <string name="account">Account</string>
    <string name="categoryAct">categoryAct</string>
    <string name="deleteBtn">Delete</string>
    <string name="favBtn">Favourite Btn</string>
    <string name="add_paper_btn">Add Paper Btn</string>
    <string name="close_btn">Close Btn</string>
    <string name="logout_btn">Logout Btn</string>
    <string name="add_Fab_Btn">Add Fab</string>
    <string name="viewPager">View Pager</string>
    <string name="tab_Layout">Tab Layout</string>
    <string name="download_Btn">Download Btn</string>
    <string name="pdf_upload_Btn">Pdf Upload Btn</string>
    <string name="addCommentBtn">Add Comment Btn</string>
    <string name="more_Btn">More Btn</string>
    <string name="contact">Thank you for considering Reflections of Faith.</string>
    <string name="my_google_map_api_key">AIzaSyA1Dc-f4vIPvewKUkRMHXWj30kBNO3ATIw</string>
    <string name="gimni_api_key">AIzaSyBmupJEwQoFtb9xtQOJXhM064h5n7x2-S0</string>
    <string name="about_us">About Us</string>
    <string name="linkedinAboutUs">Linkedin</string>
    <string name="android_kotlin">Android/Kotlin</string>
    <string name="github">Github</string>
    <string name="github_repo">Github Repo</string>
    <string name="about_me">About Me</string>
    <string name="xbcad">XBCAD</string>
    <string name="our_mission">Our Mission</string>
    <string name="about_this_app">About This App</string>
    <string name="contact_us">Contact US:</string>
    <string name="_27_123_456_7890">+27 123 456 7890</string>
    <string name="scriptsquad_gmail_com">scriptsquad@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_27_84_687_090">+27 84 687 090</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="member_since">Member since</string>
    <string name="dd_mm_yyyy_Acc">dd/MM/yyyy</string>
    <string name="account_status">Account Status</string>
    <string name="not_verified_check">Not Verified</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="verify_account">Verify Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="create_ad_title">Create Ad</string>
    <string name="pick_up_to_10_images">Pick up to 10 images</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post_ad_button">Post Ad</string>
    <string name="ad_details">Ad Details</string>
    <string name="_00">00</string>
    <string name="new_">New</string>
    <string name="title_ad_details">Title</string>
    <string name="description_ad_details">Description</string>
    <string name="address">Address</string>
    <string name="seller_detail">Seller Detail</string>
    <string name="member_since_ad_details">Member Since</string>
    <string name="dd_mm_yyyy_ad_details">dd/MM/yyyy</string>
    <string name="chat_ad">Chat</string>
    <string name="call">CALL</string>
    <string name="sms">Sms</string>
    <string name="map">Map</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="member_since_seller">Member Since</string>
    <string name="published_ads">Published Ads:</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="add_a_new_bible_category">Add a new Bible Category</string>
    <string name="category_title_bible">Category Title</string>
    <string name="submit_bible">Submit</string>
    <string name="add_bible">Add Bible</string>
    <string name="category_paper">Category</string>
    <string name="title_paper">Title</string>
    <string name="select_image">Select Image</string>
    <string name="upload">Upload</string>
    <string name="add_pictures">Add Pictures</string>
    <string name="add_picture_hashtag_or_title">Add Picture HashTag or Title</string>
    <string name="publish_image">Publish Image</string>
    <string name="add_video">Add Video</string>
    <string name="add_video_hashtag_or_title">Add Video HashTag or Title</string>
    <string name="publish_video">Publish Video</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="search">Search</string>
    <string name="add_category">+ Add Category</string>
    <string name="bibles">Bibles</string>
    <string name="category_devotional">Category</string>
    <string name="search_devotional">Search</string>
    <string name="devotional_material">Devotional Material</string>
    <string name="category_devotional_admin">Category</string>
    <string name="search_devotional_admin">Search</string>
    <string name="new_ad">New</string>
    <string name="ddMMyyyy">dd/MM/yyyy</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="search_dashboard">Search</string>
    <string name="add_category_dashboard">+ Add Category</string>
    <string name="notes">Notes</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm_password">New Confirm Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="chat_room">CHAT ROOM</string>
    <string name="start_typing">Start Typing....</string>
    <string name="are_you_sure_you_want_to_delete_your_account_you_will_lost_all_your_data">Are you sure you want to delete your Account?You will lost all your data</string>
    <string name="confirm_delete_account">Confirm Delete Account</string>
    <string name="downloading_video">Downloading Video</string>
    <string name="downloading_picture">Downloading Picture</string>
    <string name="edit_info">Edit Info</string>
    <string name="title_paper_edit">Title</string>
    <string name="category_paper_edit">Category</string>
    <string name="update">UPDATE</string>
    <string name="forgot_password_enter_your_registered_email_to_reset_password">Forgot Password?Enter Your registered Email to Reset Password</string>
    <string name="email_forgot_password">Email</string>
    <string name="submit_password">Submit</string>
    <string name="events_feed">Events Feed</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="start_typing_image">Start Typing...</string>
    <string name="pick_location">Pick Location</string>
    <string name="done">Done</string>
    <string name="log_in_with_google">Log In with Google</string>
    <string name="log_in_with_phone_number">Log In with Phone Number</string>
    <string name="log_in_with_email">Log In with Email</string>
    <string name="log_in_with_biometrics">Log In with biometrics</string>
    <string name="log_in_as_a_guest">Log In as a Guest</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email_login">Email:</string>
    <string name="email_text">Email</string>
    <string name="password_login">Password:</string>
    <string name="password_text">Password</string>
    <string name="login">Log In</string>
    <string name="login_to_your_account_phone">Login to Your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="home_main">Home</string>
    <string name="welcome">Welcome,</string>
    <string name="user">User</string>
    <string name="hello">hello</string>
    <string name="materials">Materials</string>
    <string name="chat_room_main">Chat Room</string>
    <string name="buy">Buy</string>
    <string name="notes_main">Notes</string>
    <string name="notices">Notices</string>
    <string name="the_ad_title">The Ad Title</string>
    <string name="the_long_description_of_the_ad_thst_can_be_of_multiple_lines_but_will_show_here_in_3_lines">The long description of the Ad that can be of multiple lines but will show here in 3 lines</string>
    <string name="address_of_the_ad">Address of the Ad</string>
    <string name="new_ad_button">New</string>
    <string name="person_name">Person Name</string>
    <string name="dd_mm_yyyyy">dd/mm/yyyy</string>
    <string name="the_comment_of_the_user">The Comment of the User</string>
</resources>