<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Show first Image from image of Ad -->

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/ImageIv"
            android:layout_marginEnd="10dp"
            android:background="@color/colorGray02"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image_gray"
            style="@style/ImageStyle_CornerRounded"
            />

        <!-- TextView Ad Title -->

        <TextView
            android:id="@+id/titleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/favBtn"
            android:layout_toEndOf="@id/ImageIv"
            android:maxLines="1"
            android:text="@string/the_ad_title"
            android:textColor="@color/light_mode_text" />

        <TextView
            android:id="@+id/descriptionTv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTv"
            android:layout_marginTop="2dp"
            android:layout_toStartOf="@id/favBtn"
            android:layout_toEndOf="@id/ImageIv"
            android:ellipsize="end"
            android:lines="3"
            android:text="@string/the_long_description_of_the_ad_thst_can_be_of_multiple_lines_but_will_show_here_in_3_lines"
            android:textColor="@color/light_mode_text" />

        <ImageButton
            android:id="@+id/favBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ad_favourite_btn"
            android:padding="10dp"
            android:src="@drawable/ic_fav_no"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- TextView: Show Address of the Ad -->

        <TextView
            android:id="@+id/addressTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionTv"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/ImageIv"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/address_of_the_ad"
            android:textColor="@color/light_mode_text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conditionTv"
            android:layout_toEndOf="@id/ImageIv"
            android:layout_below="@id/addressTv"
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:text="@string/new_ad_button"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/priceSymbolTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressTv"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@+id/conditionTv"
            android:text="@string/price_symbol"
            android:textColor="@color/light_mode_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priceTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_below="@id/addressTv"
            android:layout_toEndOf="@id/priceSymbolTv"
            android:text="@string/_00"
            android:layout_marginTop="4dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/dateTv"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressTv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dd_mm_yyyy"
            android:textColor="@color/light_mode_text" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>