<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Church_Events_Feed.activities.Socials_Gallery_Activity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_black"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_btn"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/toolbarTitleTv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/events_feed"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray02"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/fragmentsFl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRl"
        android:layout_above="@+id/btnLl"/>



    <LinearLayout
        android:id="@+id/btnLl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pictureBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cornerRadius="4dp"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/imagegallery"
            android:text="@string/images"
            android:backgroundTint="@color/light_mode_accent"
            app:iconTint="@color/white"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/videoBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/video"
            app:iconTint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/light_mode_accent"
            android:text="@string/videos"
            app:cornerRadius="4dp"/>



    </LinearLayout>


</RelativeLayout>