<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    app:cardBackgroundColor="@color/light_mode_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_gray"
            app:shapeAppearanceOverlay="@style/ImageStyle_circle"
            app:strokeColor="@color/colorGray02" />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/profileIv"
            android:text="@string/person_name"
            android:textColor="@color/light_mode_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/dd_mm_yyyyy"
            android:textColor="#787878"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/commentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTv"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/profileIv"
            android:text="@string/the_comment_of_the_user"
            android:textColor="@color/light_mode_text"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>